--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nekobc1998923/typescript-sdk-starter.git"
+    "url": "git+https://github.com/Yakima-Teng/typescript-sdk-starter.git"
   },
   "keywords": [
     "typescript",
@@ -39,12 +39,12 @@
     "standard-version",
     "jest"
   ],
-  "author": "菜猫子neko",
+  "author": "Yakima & 菜猫子neko",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/nekobc1998923/typescript-sdk-starter/issues"
+    "url": "https://github.com/Yakima-Teng/typescript-sdk-starter/issues"
   },
-  "homepage": "https://github.com/nekobc1998923/typescript-sdk-starter#readme",
+  "homepage": "https://github.com/Yakima-Teng/typescript-sdk-starter#readme",
   "devDependencies": {
     "@babel/core": "^7.16.5",
     "@babel/plugin-transform-runtime": "^7.16.5",
