--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
-    "lint": "eslint src test",
+    "lint": "eslint --ext .ts,.js src test scripts",
+    "lint-fix": "eslint --fix --ext .ts,.js src test scripts",
     "test": "jest",
     "dev": "rimraf dist types && cross-env NODE_ENV=development webpack-dev-server --config ./scripts/webpack.dev.js",
     "build": "npm run lint && npm run test && rimraf dist types && cross-env NODE_ENV=production webpack --config ./scripts/webpack.prod.js",
