--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0",
+    "webpack-merge": "6.0.1",
     "webpackbar": "^5.0.2"
   },
   "lint-staged": {
