--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint-fix": "eslint --fix --ext .ts,.js src test scripts",
     "test": "jest",
     "dev": "rimraf dist types && cross-env NODE_ENV=development webpack-dev-server --config ./scripts/webpack.dev.js",
-    "build": "npm run lint && npm run test && rimraf dist types && cross-env NODE_ENV=production webpack --config ./scripts/webpack.prod.js",
+    "build": "npm run lint && npm run test && rimraf types && cross-env NODE_ENV=production webpack --config ./scripts/webpack.prod.js",
     "prepare": "husky install",
     "release": "standard-version",
     "release-major": "standard-version --release-as major",
