--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "@types/jest": "^27.0.3",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
+    "@vuepress/bundler-webpack": "2.0.0-rc.19",
+    "@vuepress/theme-default": "2.0.0-rc.70",
     "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.4.1",
@@ -73,7 +75,7 @@
     "ts-jest": "^27.1.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.4",
-    "vuepress": "^2.0.0-beta.32",
+    "vuepress": "2.0.0-rc.19",
     "webpack": "^5.65.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
