--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-sdk-starter",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "private": false,
   "description": "A TypeScript SDK template starter",
   "main": "dist/typescript-sdk-starter.js",
@@ -16,7 +16,7 @@
     "lint-fix": "eslint --fix --ext .ts,.js src test scripts",
     "test": "jest",
     "dev": "rimraf dist types && cross-env NODE_ENV=development webpack-dev-server --config ./scripts/webpack.dev.js",
-    "build": "npm run lint && npm run test && rimraf types && cross-env NODE_ENV=production webpack --config ./scripts/webpack.prod.js",
+    "build": "npm run lint-fix && npm run test && rimraf types && cross-env NODE_ENV=production webpack --config ./scripts/webpack.prod.js",
     "prepare": "husky install",
     "release": "standard-version",
     "release-major": "standard-version --release-as major",
@@ -40,7 +40,7 @@
     "standard-version",
     "jest"
   ],
-  "author": "Yakima & 菜猫子neko",
+  "author": "Yakima",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Yakima-Teng/typescript-sdk-starter/issues"
@@ -53,8 +53,8 @@
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@types/jest": "^27.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "@vuepress/bundler-webpack": "2.0.0-rc.19",
     "@vuepress/theme-default": "2.0.0-rc.70",
     "babel-loader": "^8.2.3",
@@ -63,7 +63,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jest": "^25.3.0",
+    "eslint-plugin-jest": "^28.10.0",
     "eslint-plugin-prettier": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
@@ -71,6 +71,8 @@
     "lint-staged": "^12.1.2",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
+    "sass": "1.83.4",
+    "sass-loader": "16.0.4",
     "standard-version": "^9.3.2",
     "ts-jest": "^27.1.1",
     "ts-loader": "^9.2.6",
