--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "noEmitOnError": true,
     // baseUrl来告诉编译器到哪里去查找模块，所有非相对模块导入都会被当做相对于 baseUrl。
     "baseUrl": ".",
+    "esModuleInterop": true,
     // 非相对模块导入的路径映射配置
     "paths": {
       "@/*": ["src/*"],
